change extract user info -> now is by email
